<resources>
    <string name="app_name">TxTLauncher</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="applist_button_desc">Installed applications</string>
    <string name="quit_button_desc">Quit</string>
    <string name="started">Started app</string>
    <string name="dark_mode">dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="service_disable">No device administrator privilege</string>
    <string name="button_dial">Dial app</string>
    <string name="button_mail">Mail app</string>
    <string name="button_browser">Browser app</string>
    <string name="button_camera">Camera app</string>
    <string name="button_search">Search app</string>
    <string name="setting_addapp">Add app to home screen</string>
    <string name="setting_sysicon">Home screen use sys app icon</string>
    <string name="setting_starticon">Home screen use apps icon</string>
    <string name="settings_title">Settings</string>
    <string name="started_activity">Started activity</string>
    <string name="stopped_activty">Stopped activity</string>
    <string name="starting_other_app">Starting other app</string>
    <string name="favorite_apps">Faviorites</string>
    <string name="note_title">Note</string>
    <string name="settings_addfavapp">Add favorites app</string>
    <string name="title_home_addapp">Select app to home</string>
    <string name="title_favorite_addapp">Select app to favorites</string>
    <string name="title_widget">Tools</string>
    <string name="search">Search</string>
    <string name="new_install">First time run: initializing</string>
    <string name="update_install">Updated version: initializing</string>
    <string name="settings_title_privateai">Private AI set URL</string>
    <string name="settings_title_searchurl">Web search URL</string>
    <string name="settings_title_background_image">Background image name (in download folder)</string>
    <string name="settings_button_reset">Reset</string>
    <string name="settings_read_applist_title">Re-read app list (after install, delete apps)</string>
    <string name="settings_sysbackground">Set system background image</string>
    <string name="error_bitmap">Error with image manipulation</string>
    <string name="background_file_not_found">Not found background image file</string>
    <string name="button_close_widget">Close</string>
    <string name="start_ai">Start AI</string>
    <string name="settings_weather_html1">Weather HTML (@CITY@ - where the city should be inserted)</string>
    <string name="version">Version</string>
    <string name="widgat_map">Go to map</string>
    <string name="error_startapp">App launch failed</string>
    <string name="news_update_title">The app is updated</string>
    <string name="news_update">New functions:\n\n- error repair\n- new function</string>
    <string name="button_next">Next</string>
    <string name="help_title">Help</string>
    <string name="news_firstrun_title">First start</string>
    <string name="news_firstrun">Initializing...</string>
    <string name="help_text_2">Usage:\n\n- Swipe right: Tools\n- Swipe left: Discover\n- Swipe up: List of apps\n- Swipe down: Favorite apps\n- Double-tap on an empty area: lock screen\n- Long-press on an empty area: favorite apps\n- Long-press on the settings icon: Android system settings\n- Long-press on the browser icon: open the browser in private mode\n- Long-press on the search icon: open the browser in private mode \n</string>
    <string name="help_text_3">Settings:\n\n- Select apps for the home screen\n- Select favorite apps\n- Enable icon display\n    - System icons\n    - App icons\n    - Adaptive icons\n    - Adaptive icon color\n- Configure AI link (custom AI launchable from the browser)\n- Set web search engine (URL)\n- Set weather lURL or word\n- Wallpaper (file name; if successfully loaded from the Downloads folder, the system will save it)\n- Delete saved wallpaper\n- Reset text settings to default values\n- Re-scan apps (if the app list is incorrect after an update, installation, or deletion)</string>
    <string name="help_text_1">A simple control app for Android. It does not interact with Android’s internal system or use external access, so it is energy-efficient and fast.\n\nIt supports the display of app icons and the use of adaptive icons.\n\nIt can also use a home screen wallpaper, which can be set in the Settings tab. (You must specify the image name; the image must be in the Downloads folder.) If it can open the specified image, it will save it.\n\nThe home screen features icons for various functions: search, weather, settings, and the default Android AI app. The basic functions are displayed at the bottom: calls, messages, app list, browser, and camera. These functions launch the default Android apps.</string>
    <string name="help_text_4">A new version is available for download on the website.\nLicence: GPLv3</string>
    <string name="licence">GPLv3</string>
    <string name="button_help">Help</string>
    <string name="button_settings">Settings</string>
    <string name="weather_title">Weather (city)</string>
    <string name="button_weather">Weather</string>
    <string name="search_weather">weather</string>
    <string name="button_map">Open map app</string>
    <string name="button_ai">Private AI</string>
    <string name="button_discovery">Discovery</string>
    <string name="button_lock">Lock screen</string>
    <string name="button_aiapp">Start AI</string>
    <string name="settings_title_weather">Weather URL or key word for search</string>
    <string name="accessibility_description">Accessibility service to lock</string>
    <string name="wbutt_dial">Dial</string>
    <string name="wbutt_mail">E-mail</string>
    <string name="wbutt_help">Help</string>
    <string name="wbutt_browser">Internet</string>
    <string name="wbutt_camera">Camera</string>
    <string name="wbutt_applist">Appications</string>
    <string name="wbutt_favlist">Favorites</string>
    <string name="wbutt_ai">AI</string>
    <string name="wbutt_discovery">Discovery</string>
    <string name="wbutt_map">Map</string>
    <string name="error_lock">Please enable accessibility right</string>
    <string name="settings_adapticon">Use adaptive icons</string>
    <string name="settings_onecolfav">One column favorites</string>
    <string name="settings_resetbackground_title">Delete saved background image (before change)</string>
    <string name="settings_backround_image_placeholder">Background image file name</string>
    <string name="settings_resetbackground">Delete</string>
    <string name="settings_read_applist">Read apps</string>
    <string name="settings_button_reset_title">Settings reset</string>
    <string name="settings_text_color">Text color mode</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="button_arrow">Function</string>
    <string name="settings_show_arrows">Navigation using the arrow keys</string>
    <string name="settings_show_main_icons">Show main icons</string>
    <string name="widget_weather">Weather data</string>
    <string name="settings_extra_tools">Special tools (more resource consumption)</string>
    <string name="wbutt_weather">Weather</string>

</resources>