<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:forceDarkAllowed="true"
    android:orientation="vertical"
    android:scaleWidth="100%"
    android:scaleHeight="100%"
    android:scaleGravity="clip_horizontal|center|clip_vertical|fill|fill_horizontal|center_vertical|fill_vertical"
    android:tooltipText="@string/applist_button_desc"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/lLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp"
        tools:ignore="DisableBaselineAlignment,MissingConstraints">

            <TextView
                android:id="@+id/digitalClock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="openClock"
                android:gravity="start"
                android:textAlignment="gravity"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/digitalDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openClock"
                android:gravity="start"
                android:textAlignment="gravity"
                android:textStyle="bold" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/lLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@id/lLayout1"
            tools:ignore="DisableBaselineAlignment,MissingConstraints">

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_search"
                android:onClick="startSearch"
                app:srcCompat="@drawable/search" />

            <ImageView
                android:id="@+id/weatherButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_weather"
                android:onClick="openWeatherSearch"
                android:gravity="center"
                app:srcCompat="@drawable/weather" />

            <ImageView
                android:id="@+id/settingsButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_settings"
                android:onClick="openAndroidSystemSettings"
                app:srcCompat="@drawable/settings" />

            <ImageView
                android:id="@+id/mapButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_aiapp"
                android:onClick="openAI"
                app:srcCompat="@drawable/ai_star" />

    </LinearLayout>

    <View
        android:id="@+id/viewPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/AppFrame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="75dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toTopOf="@id/buttonsFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lLayout1">

        <ListView
            android:id="@+id/homeAppList1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|clip_horizontal|start|fill_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layoutDirection="locale" />

        <ListView
            android:id="@+id/homeAppList2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|clip_horizontal|fill_horizontal|end"
            android:layout_marginEnd="20dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_weight="1">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/dialButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/button_dial"
            android:onClick="startButtonApp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/call" />

        <ImageView
            android:id="@+id/mailButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_mail"
            android:onClick="startButtonApp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/dialButton"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/applistButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/applist_button_desc"
            android:onClick="openAppListButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/menu"
            tools:layout_editor_absoluteX="194dp" />

        <ImageView
            android:id="@+id/browserButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_browser"
            android:onClick="startButtonApp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cameraButton"
            app:srcCompat="@drawable/internet" />

        <ImageView
            android:id="@+id/cameraButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_camera"
            android:onClick="startButtonApp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/camera" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>