<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WidgetActivity">

    <LinearLayout
        android:id="@+id/widgetQuitFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="closeWidgetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/widgetTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/title_widget"
            android:textAlignment="gravity"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/widgetScrollFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@id/widgetLayout"
        app:layout_constraintTop_toBottomOf="@id/widgetQuitFrame"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:id="@+id/widgetContLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:scrollIndicators="right"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/buttonsFrame1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/wdialButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:contentDescription="@string/button_dial"
                    android:onClick="startButtonApp1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/call" />

                <ImageView
                    android:id="@+id/wmailButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_mail"
                    android:onClick="startButtonApp2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/dialButton"
                    app:srcCompat="@drawable/email" />

                <ImageView
                    android:id="@+id/whelpButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/applist_button_desc"
                    android:onClick="startButtonApp3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/help"
                    tools:layout_editor_absoluteX="194dp" />

                <ImageView
                    android:id="@+id/wbrowserButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_browser"
                    android:onClick="startButtonApp4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cameraButton"
                    app:srcCompat="@drawable/internet" />

                <ImageView
                    android:id="@+id/wcameraButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_camera"
                    android:onClick="startButtonApp5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/camera" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonsFrame2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/wapplistButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/applist_button_desc"
                    android:onClick="startButtonApp6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/menu" />

                <ImageView
                    android:id="@+id/wfavlistButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/favorite_apps"
                    android:onClick="startButtonApp7"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/dialButton"
                    app:srcCompat="@drawable/bookmarks" />

                <ImageView
                    android:id="@+id/waiButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_ai"
                    android:onClick="startButtonApp8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/ai"
                    tools:layout_editor_absoluteX="194dp" />

                <ImageView
                    android:id="@+id/wdiscoveryButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_discovery"
                    android:onClick="startButtonApp9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cameraButton"
                    app:srcCompat="@drawable/discovery" />

                <ImageView
                    android:id="@+id/wmapButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/button_lock"
                    android:onClick="startButtonApp10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/map" />

            </LinearLayout>

            <TextView
                android:id="@+id/widgetNoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@string/note_title"
                android:textAlignment="gravity"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/closeWidgetButton" />

            <EditText
                android:id="@+id/widgetTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/material_dynamic_neutral30"
                android:backgroundTint="@color/material_dynamic_neutral30"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/note_title"
                android:autofillHints="@string/note_title"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:isScrollContainer="true"
                android:lines="15"
                android:maxLines="100"
                android:minLines="15"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/widgetNoteTitle" />

            <View
                android:id="@+id/widgetDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/widgetTextNote" />

            <CalendarView
                android:id="@+id/widgetCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/widgetDivider" />

            <View
                android:id="@+id/widgetDividerCal"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/widgetCalendar" />

            <Button
                android:id="@+id/widgetCloseView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:gravity="center|center_horizontal"
                android:onClick="closeWidgetButton"
                android:text="@string/button_close_widget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startAI" />

            <View
                android:id="@+id/widgetDivider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/widgetCloseView" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>